--- a/Index.html
+++ b/Index.html
@@ -5,9 +5,10 @@
 
 <h1>My First JavaScript Page</h1>
 
-<p style.display="block">Click the button to hide me!</p>
+<p id="test" style.display="block">Click the button to hide me!</p>
 
-<button type="button" onclick="document.getElementById("test").style.display="none">Hide</button>
+<button type="button" onclick="document.getElementById('test').style.display='none'">Hide</button>
+<button type="button" onclick="document.getElementById('test').style.display='block'">Unhide</button>
 
 </body>
 </html>
