--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,28 @@
 <title>MyFirstJavaScriptPage</title>
 <body>
 
+<script type="text/javascript" src="test1.js"></script>
+
 <h1>My First JavaScript Page</h1>
 
 <p id="test" style.display="block">Click the button to hide me!</p>
 
 <button type="button" onclick="document.getElementById('test').style.display='none'">Hide</button>
 <button type="button" onclick="document.getElementById('test').style.display='block'">Unhide</button>
+
+<p id="formatP2">This is the original paragraph. As you can see, no special formatting has been applied to this paragraph.</p>
+
+<div id="formatD2">
+<ul id="formatL2" style="list-style-type:disc">
+  <li>Lions</li>
+  <li>Tigers</li>
+  <li>Bears</li>
+  <li>Oh my!</li>
+</ul>
+</div>
+
+<button type="button" onclick="changeFormat()">Change Format</button>
+<button type="button" onclick="revertFormat()">Revert Format</button>
 
 </body>
 </html>
