Prompt User for Input
Demonstration of prompting user; Use alert() to display output

--- a/Index.html
+++ b/Index.html
@@ -51,9 +51,16 @@ parentheses after the function name, which is common nomenclature among most pro
 <hr >
 
 <!-- These buttons call the two JavaScript functions which modify the placement and appearance of the navigation bar -->
-<p>Click the buttons below to page layout.</p>
+<p>Click the buttons below to change page layout.</p>
 <button type="button" onclick="transformPage1()">Layout 1</button>
 <button type="button" onclick="transformPage2()">Layout 2</button>
+
+<hr >
+
+<!-- These buttons call the JavaScript functions for displaying your name and performing math problems -->
+<p>Name and Arithmetic</p>
+<button type="button" onclick="displayName()">Prompt for Name</button>
+<button type="button" onclick="doMath()">Prompt for Numbers</button>
 </div>
 </body>
 </html>
